syntax = "proto3";

package metadata_service;

import "google/protobuf/empty.proto";

option go_package = "github.com/Gerardo115pp/libery-dungeon/libery_metadata_service;metadata_service_pb";

message IsClusterPrivate {
    string cluster_uuid = 1;
}

message TaggableEntities {
    repeated string entities_uuids = 1;
    int32 tag_id = 2;
    string entity_type = 3;
}

message BooleanResponse {
    bool response = 1;
}

message AllPrivateClustersResponse {
    repeated string private_clusters = 1;
}

message TagList {
    repeated int32 tag_id = 1;
}

message EntitiesByType {
    map<string, EntityList> entities_by_type = 1;
}

message EntityList {
    repeated string entities_uuids = 1;
}

message Entity {
    string entity_uuid = 1;
    string cluster_domain = 2;
}

message CopyEntityTags {
    string source_entity = 1;
    repeated string entities = 2;
    string cluster_domain = 3;
    string entities_type = 4;
}


service MetadataService {
    rpc CheckClusterPrivate(IsClusterPrivate) returns (BooleanResponse);
    rpc CopyEntityTagsToEntityList(CopyEntityTags) returns (BooleanResponse);
    rpc GetAllPrivateClusters(google.protobuf.Empty) returns (AllPrivateClustersResponse);
    rpc GetEntityTags(Entity) returns (TagList);
    rpc TagEntities(TaggableEntities) returns (BooleanResponse);
    rpc UntagEntities(TaggableEntities) returns (BooleanResponse);
    rpc GetEntitiesWithTaggings(TagList) returns (EntitiesByType);
    rpc DeleteEntitiesTaggings(EntityList) returns (BooleanResponse);
}